--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
